# gallica-autobib-demosite

./: .gitignore
backend/: pyproject.toml
backend/app/: main.py
backend/app/static/: index.html
backend/app/templates/: response.html
